<resources>
    <string name="app_name">Assignment5_dup</string>
    <string name="NickName">Nick Name</string>
    <string name="Password">Password</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="year">Start year</string>
    <string name="lat_long">Latitude and longitude</string>
    <string name="set">Set </string>
    <string name="saveData">Save </string>
    <string name="cancelData">Cancel</string>
    <string name="country_prompt">Choose a country!</string>
    <string name="statePrompt">Choose a State!</string>
    <string name="cityPrompt">Enter a city</string>
    <string name="yearPrompt">Choose a year!</string>
    <string name="google_maps_key">AIzaSyD-rvog1Q_RLVzzF9Kt3s7sXLTuabMQi38</string>
    <string name="nav_post">Post Data!</string>
    <string name="nav_view">Find people!</string>
    <string name="post_item">Post Data!</string>
    <string name="view_item">Search for people!</string>
    <string name="view">View Users!</string>
    <string name="filter">List View</string>
    <string name="filterMap">Map view</string>
    <string name="ok">Done</string>
    <string name="back"> Go Back</string>
    <string name="more">More Users?</string>
    <string name="listView">View as List!</string>
    <string name="mapView">View on Map!</string>
    <string name="countryFilter">Enter country to filter</string>
    <string name="stateFilter">Enter state to filter</string>
    <string name="yearFilter">Enter year to filter</string>
    <string name="cityBtn">Set precise location on map</string>
    <string name="filterBtn">Filter</string>
    <string name="chatBtn">Chat?</string>
    <string name="username">User name </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="logintxt">Already a member?</string>
    <string name="signuptxt">Not a member? Register today!</string>
    <string name="signin_failed">Could not sign in!</string>
    <string name="signout">Sign out</string>
    <string name="email">Email</string>
    <string name="viewAll">View All users</string>
    <string name="older">Older Conversations</string>
</resources>
