<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/viewmode"
        android:orderInCategory="100"
        android:title="@string/view"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/submenu1"
                android:orderInCategory="100"
                android:title="@string/listView"
                app:showAsAction="never"/>
            <item
                android:id="@+id/submenu2"
                android:orderInCategory="100"
                android:title="@string/mapView"
                app:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never">
    </item>

</menu>