<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:text="@string/logintxt"
        android:layout_marginBottom="50dp"
        android:layout_alignBottom="@+id/login"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/signUpText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpText"
        android:text="@string/signuptxt"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/signUpText"
        android:layout_alignStart="@+id/login"
        android:layout_marginTop="5dp" />
</RelativeLayout>