<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/inner1"
        >
        <TextView
            android:id="@+id/countriesTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="center_vertical"
            android:text="@string/Country"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/countriesspin"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/inner2">

        <TextView
            android:id="@+id/statesTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/State"/>

        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/statesspin"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/inner3">
        <TextView
            android:id="@+id/yearText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="15dp"
            android:gravity="center_vertical"
            android:text="@string/year"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/yearsspin"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inner4"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:id="@+id/filterUsers"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapBtn"
            android:text="@string/filterMap"/>

    </LinearLayout>

</LinearLayout>